--- a/index.html
+++ b/index.html
@@ -483,10 +483,10 @@
             </div>
             
             <!-- Loading State -->
-            <div id="pricing-loading" class="text-center py-8">
+            <!-- <div id="pricing-loading" class="text-center py-8">
                 <div class="inline-block animate-spin rounded-full h-8 w-8 border-t-2 border-b-2 border-[#E63946] mb-4"></div>
                 <p>Loading pricing information for your country...</p>
-            </div>
+            </div> -->
 
             <!-- Payment Form (hidden by default) -->
             <div id="payment-form" class="bg-white p-8 rounded-lg shadow-lg mt-82">
