--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         // Initialize Paystack payment
         function payWithPaystack(name, email) {
             const handler = PaystackPop.setup({
-                key: 'pk_test_fe3c7c857fbdf1e647efae4259d89937f3914562',
+                key: '',
                 email: email,
                 amount: selectedAmount,
                 currency: 'NGN',
