--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <title>90-Day Data Analytics Challenge - Transform Your Career in 3 Months</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -888,7 +889,7 @@
             if (userCurrency === 'NGN') {
                 if (usdAmount === 50) return 50000;
                 if (usdAmount === 150) return 150000;
-                if (usdAmount === 300) return 300000;
+                if (usdAmount === 250) return 300000;
                 if (usdAmount === 600) return 600000;
                 return usdAmount;
             }
